# pyopf

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: calib_stats.py  compute_reprojection_error.py
src/opf_tools/convert/: __main__.py  converter.py  v1_0_draft6_v1_0_draft7.py  v1_0_draft7_v1_0_draft8.py  v1_0_draft8_v1_0_draft9.py  v1_0_draft9_latest.py
src/opf_tools/crop/: __main__.py  cropper.py
src/opf_tools/merge/: __main__.py  merger.py
src/opf_tools/opf2colmap/: __main__.py  converter.py
src/opf_tools/opf2las/: converter.py
src/opf_tools/opf2nerf/: __main__.py  converter.py
src/opf_tools/opf2ply/: __main__.py  converter.py
src/opf_tools/undistort/: __main__.py  undistorter.py
src/pyopf/: VersionInfo.py  formats.py  items.py  types.py  uid64.py  util.py  versions.py
src/pyopf/cameras/: __init__.py  calibrated_cameras.py  camera_list.py  gps_bias.py  input_cameras.py  input_rig_relatives.py  projected_input_cameras.py  sensor_internals.py
src/pyopf/cps/: __init__.py  calibrated_control_points.py  constraints.py  input_control_points.py  projected_control_points.py
src/pyopf/crs/: __init__.py  crs.py  geolocation.py  scene_reference_frame.py
src/pyopf/ext/: __init__.py  pix4d_calibrated_intersection_tie_points.py  pix4d_input_depth_map.py  pix4d_input_intersection_tie_points.py  pix4d_planes.py  pix4d_polygonal_mesh.py  pix4d_region_of_interest.py  plane.py
src/pyopf/io/: __init__.py  loaders.py  savers.py
src/pyopf/legacy/: __init__.py  calibrated_cameras_1_0_draft2.py  camera_list_1_0_draft1.py  input_cameras_1_0_draft10.py  input_cameras_1_0_draft11.py  input_cameras_1_0_draft8.py  input_cameras_1_0_draft9.py  input_control_points_1_0_draft2.py  input_rig_relatives_1_0_draft11.py  input_rig_relatives_1_0_draft8.py  pix4d_input_depth_map_1_0_draft1.py  project_1_0_draft9_aliases_1_0.py  projected_input_cameras_1_0_draft5.py  sensor_internals_1_0_draft10.py  sensor_internals_1_0_draft8.py  tracks.py
src/pyopf/pointcloud/: __init__.py  merge.py  pcl.py  utils.py
src/pyopf/project/: __init__.py  metadata.py  project.py  project_objects.py  types.py
src/pyopf/resolve/: __init__.py  resolver.py
